--- a/性能调优命令参数.md
+++ b/性能调优命令参数.md
@@ -36,6 +36,15 @@ top [参数]
 
 
 
+##### **如何定位问题源码**
+
+1. 首先使用命令：**top**，定位到占用CPU高的进程PID
+2. **top -Hp pid** ，查看该进程下哪个线程CPU占有最高
+3. 进制转换，线程pid转换为16进制命令：**printf "%x\n"** **[线程tid] 。**这里做这一步是因为jstack 进程ID的内容显示的线程信息中线程ID nid是16进制的，方便grep 查找
+4. 使用命令： **jstack 21711 | grep pid -A 20** 查看线程信息，定位代码，可以看到CPU消耗在PollIntervalRetrySchedulerThread这个类的Object.wait()；
+
+
+
 ### df
 
 > Linux df（英文全拼：disk free） 命令用于显示目前在 Linux 系统上的文件系统磁盘使用情况统计。
@@ -66,7 +75,7 @@ df [选项]... [FILE]...
 
 
 
-### 查看物理内存占用
+### free查看物理内存占用
 
 ```sh
 free -mh
@@ -90,7 +99,65 @@ cached——缓存，用于已打开的文件
 
 
 
-### 清除缓存
+### dstat
+
+#### 1.安装
+
+```shell
+yum install -y dstat
+```
+
+#### 2.使用说明
+
+直接使用dstat，默认使用的是-cdngy参数，分别显示cpu、disk、net、page、system信息
+
+|  分组  |      分组含义及子项字段含义                             |
+|------|-------------------------------------------------------|
+|CPU状态 |	CPU的使用率。显示了用户占比，系统占比、空闲占比、等待占比、硬中断和软中断情况。|
+|磁盘统计|	磁盘的读写，分别显示磁盘的读、写总数。|
+|网络统计|	网络设备发送和接受的数据，分别显示的网络收、发数据总数。|
+|分页统计|	系统的分页活动。分别显示换入（in）和换出（out）。|
+|系统统计|	统计中断（int）和上下文切换（csw）。|
+
+#### 3.常见选项
+
+```
+-c：显示CPU系统占用，用户占用，空闲，等待，中断，软件中断等信息。
+-C：当有多个CPU时候，此参数可按需分别显示cpu状态，例：-C 0,1 是显示cpu0和cpu1的信息。
+-d：显示磁盘读写数据大小。
+-D hda,total：include hda and total。
+-n：显示网络状态。
+-N eth1,total：有多块网卡时，指定要显示的网卡。
+-l：显示系统负载情况。
+-m：显示内存使用情况。
+-g：显示页面使用情况。
+-p：显示进程状态。
+-s：显示交换分区使用情况。
+-S：类似D/N。
+-r：I/O请求情况。
+-y：系统状态。
+--ipc：显示ipc消息队列，信号等信息。
+--socket：用来显示tcp udp端口状态。
+-a：此为默认选项，等同于-cdngy。
+-v：等同于 -pmgdsc -D total。
+--output 文件：此选项也比较有用，可以把状态信息以csv的格式重定向到指定的文件中，以便日后查看。例：dstat --output /root/dstat.csv & 此时让程序默默的在后台运行并把结果输出到/root/dstat.csv文件中。
+```
+
+
+
+### **hdparm查看硬度读取速度**
+
+```
+hdparm -t /dev/sda5
+```
+
+
+
+
+
+
+
+### 清除服务器缓存
 
 1.数据同步
 
@@ -142,17 +209,177 @@ netstat -an |grep "TIME_WAIT" |wc -l
 
 ### jps
 
-jps -l
+> jps用于列出Java的进程，jps可以增加参数，-m用于输出传递给Java进程的参数，-l用于输出主函数的完整路径，-v可以用于显示传递给jvm的参数
 
-jps -lv
+
+
+```shell
+# jps -l
+
+
+1248 ./ApacheJMeter.jar
+11953 villageapp.jar
+12220 sun.tools.jps.Jps
+12143 arthas-boot.jar
+```
+
+```shell
+# jps -lv
+
+
+1248 ./ApacheJMeter.jar -XX:+HeapDumpOnOutOfMemoryError -Xms1g -Xmx1g -XX:MaxMetaspaceSize=256m -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:G1ReservePercent=20 -Djava.security.egd=file:/dev/urandom -Duser.language=en -Duser.region=EN
+11953 villageapp.jar -Djava.security.egd=file:/dev/./urandom -Xms6144M -Xmx6144M -Xmn3072M -Xss1M -XX:SurvivorRatio=4 -XX:+UseSerialGC
+12237 sun.tools.jps.Jps -Dapplication.home=/jdk/jdk1.8.0_144 -Xms8m
+12143 arthas-boot.jar
+```
+
+```shell
+# jps -lvm
+1248 ./ApacheJMeter.jar -Dserver_port=1099 -s -j jmeter-server.log -XX:+HeapDumpOnOutOfMemoryError -Xms1g -Xmx1g -XX:MaxMetaspaceSize=256m -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:G1ReservePercent=20 -Djava.security.egd=file:/dev/urandom -Duser.language=en -Duser.region=EN
+11953 villageapp.jar -Djava.security.egd=file:/dev/./urandom -Xms6144M -Xmx6144M -Xmn3072M -Xss1M -XX:SurvivorRatio=4 -XX:+UseSerialGC
+12252 sun.tools.jps.Jps -lvm -Dapplication.home=/jdk/jdk1.8.0_144 -Xms8m
+12143 arthas-boot.jar
+```
 
 ### jstat
 
-jstat -gc [进程id] [interval] [count]
+>  jstat是一个可以用于观察Java应用程序运行时信息的工具，它的功能非常强大，可以通过它查看堆信息的详细情况，它的基本使用方法为
+
+```shell
+jstat -<option> [-t] [-h<lines>] <vmid> [<interval> [<count>]]
+```
+
+选项option可以由以下值组成：
+
+```shell
+jstat -class pid:显示加载class的数量，及所占空间等信息。 
+jstat -compiler pid:显示VM实时编译的数量等信息。 
+jstat -gc pid:可以显示gc的信息，查看gc的次数，及时间。其中最后五项，分别是young gc的次数，young gc的时间，full gc的次数，full gc的时间，gc的总时间。 
+jstat -gccapacity:可以显示，VM内存中三代（young,old,perm）对象的使用和占用大小，如：PGCMN显示的是最小perm的内存使用量，PGCMX显示的是perm的内存最大使用量，PGC是当前新生成的perm内存占用量，PC是但前perm内存占用量。其他的可以根据这个类推， OC是old内纯的占用量。 
+jstat -gcnew pid:new对象的信息。 
+jstat -gcnewcapacity pid:new对象的信息及其占用量。 
+jstat -gcold pid:old对象的信息。 
+jstat -gcoldcapacity pid:old对象的信息及其占用量。 
+jstat -gcpermcapacity pid: perm对象的信息及其占用量。 
+jstat -gcutil pid:统计gc信息统计。 
+jstat -printcompilation pid:当前VM执行的信息。 
+除了以上一个参数外，还可以同时加上 两个数字，如：jstat -printcompilation 3024 250 6是每250毫秒打印一次，一共打印6次。
+```
+
+ 这些参数中最常用的参数是gcutil，下面是该参数的输出介绍以及一个简单例子：
+
+```shell
+S0  — Heap上的 Survivor space 0 区已使用空间的百分比 
+S1  — Heap上的 Survivor space 1 区已使用空间的百分比 
+E   — Heap上的 Eden space 区已使用空间的百分比 
+O   — Heap上的 Old space 区已使用空间的百分比 
+P   — Perm space 区已使用空间的百分比 
+YGC — 从应用程序启动到采样时发生 Young GC 的次数 
+YGCT– 从应用程序启动到采样时 Young GC 所用的时间(单位秒) 
+FGC — 从应用程序启动到采样时发生 Full GC 的次数 
+FGCT– 从应用程序启动到采样时 Full GC 所用的时间(单位秒) 
+GCT — 从应用程序启动到采样时用于垃圾回收的总时间(单位秒) 
+   
+实例使用1： 
+   
+[root@localhost bin]# jstat -gcutil 25444 
+   
+  S0     S1     E      O      P     YGC     YGCT    FGC    FGCT     GCT 
+   
+ 11.63   0.00   56.46  66.92  98.49 162    0.248    6      0.331    0.579 
+```
+
+找到应用程序的PID，查看GC情况。interval是采样时间间隔。count是采样数目。比如下面输出的是GC信息，采样时间间隔为250ms，采样数为4：
+
+**jstat -gc 21711 250 4**
+
+
 
 ### jmap
 
-jmap -heap [进程id]
+>  jmap（Memory Map）和jhat（Java Heap Analysis Tool）jmap用来查看**堆内存使用状况**，一般结合jhat使用。
+
+```shell
+jmap [option] pid
+jmap [option] executable core
+jmap [option] [server-id@]remote-hostname-or-ip
+```
+
+如果运行在64位JVM上，可能需要指定-J-d64命令选项参数：**jmap -permstat pid。**
+
+jmap打印进程的类加载器和类加载器加载的持久代对象信息，输出：类加载器名称、对象是否存活（不可靠）、对象地址、父类加载器、已加载的类大小等信息。
+
+
+
+**jmap进程内存使用情况dump**
+
+> jmap -dump:format=b,file=dumpFileName pid
+
+```shell
+# jmap -dump:format=b,file=heap.hprof 31531
+Dumping heap to /Users/caojie/heap.hprof ...
+Heap dump file created
+```
+
+dump出来的文件可以用MAT、VisualVM等工具查看，这里用jhat查看：
+
+**`jhat -port 9998 /tmp/dump.dat`**
+
+注意如果Dump文件太大，可能需要加上-J-Xmx512m这种参数指定最大堆内存，即：
+
+**jhat -J-Xmx512m -port 9998 /tmp/dump.dat**
+
+然后就可以在浏览器中输入主机地址:9998查看了：
+
+### jinfo
+
+>  jinfo可以用来查看正在运行的Java应用程序的扩展参数，甚至在运行时修改部分参数，它的基本语法为
+
+```shell
+jinfo  <option>  <pid>
+```
+
+jinfo可以查看运行时参数：
+
+```shell
+# jinfo -flag MaxTenuringThreshold 31518
+-XX:MaxTenuringThreshold=15
+```
+
+jinfo还可以在运行时修改参数值：
+
+```shell
+# jinfo -flag PrintGCDetails 31518
+-XX:-PrintGCDetails
+# jinfo -flag +PrintGCDetails 31518
+# jinfo -flag PrintGCDetails 31518
+-XX:+PrintGCDetails
+```
+
+### jhat
+
+> 使用jhat工具可以分析Java应用程序的堆快照文件，使用命令如下
+
+```shell
+# jhat heap.hprof
+Reading from heap.hprof...
+Dump file created Tue Nov 11 06:02:05 CST 2014
+Snapshot read, resolving...
+Resolving 8781 objects...
+Chasing references, expect 1 dots.
+Eliminating duplicate references.
+Snapshot resolved.
+Started HTTP server on port 7000
+Server is ready.
+```
+
+### jstack
+
+> 　jstack可用于导出Java应用程序的线程堆栈信息，语法为
+
+```shell
+jstack -l <pid>
+```
 
 
 
@@ -179,3 +406,23 @@ maxThreads、minSpareThreads是tomcat工作线程池的配置参数，maxThreads
     max-connections: 8192
     # 连接超时时间
     connection-timeout: 10000
+
+
+
+
+
+## 数据库相关
+
+### 查看索引
+
+SHOW index FROM `tblname`; 
+
+或者:
+
+ SHOW keys FROM `tblname`;
+
+
+
+
+
+ALTER TABLE `account_loan_table`  ADD INDEX `ph_curorgid_idx`(`ph_curorgid`) USING BTREE;
